--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,16 @@
 <rpa-file-manager></rpa-file-manager>
 
-
 <p (contextmenu)="showMenu($event)" (click)="t.t()">Right click here</p>
 
 <button (click)="showDialog()">Show Dilaog</button>
+
+<rpa-stepper>
+  <rpa-step>
+    Step 1 - Content
+    <input type="text" [(ngModel)]="testText">
+  </rpa-step>
+  <rpa-step>
+    Step 2 - content
+    You entered : {{testText}}
+  </rpa-step>
+</rpa-stepper>
