Working on SVG functionality

--- a/src/app/canvas/components/canvas/canvas.component.html
+++ b/src/app/canvas/components/canvas/canvas.component.html
@@ -1,7 +1,7 @@
 <div class="root">
   <div class="scroll">
     <div class="svg-container" #svgContainer>
-
+      <svg #svg></svg>
     </div>
   </div>
 </div>
